# network-dashboard

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README.md
docs/: agent-guide.md  api.md  architecture.md  filter-rules.md  opnsense-setup.md  runbook.md
infra/: docker-compose.override.yml.example  docker-compose.yml
infra/backups/: sqlite-backup.sh
infra/fluent-bit/: fluent-bit.conf  parsers.conf
infra/loki/: loki-config.yaml
services/engine/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/engine/app/: classifier.py  config.py  db.py  deps.py  eve.py  logging.py  loki_client.py  main.py  models.py  retention.py  ring_buffer.py  rule_index.py  schemas.py  security.py  stats.py
services/engine/app/routes/: events.py  filters.py  health.py  ingest.py  stats.py
services/engine/migrations/: env.py
services/engine/migrations/versions/: 0001_init_filters.py  0002_add_filter_audit.py
services/engine/scripts/: replay_eve.py  seed_filters.py
services/engine/tests/: conftest.py  test_classifier.py  test_eve.py  test_filters_api.py  test_ingest.py  test_retention.py  test_ring_buffer.py
services/engine/tests/fixtures/: eve_alert_basic.json  eve_alert_with_dest.json
services/ui/: Dockerfile  README.md  pyproject.toml
services/ui/app/: config.py  engine_client.py  logging.py  main.py
services/ui/app/routes/: htmx.py  pages.py
services/ui/static/css/: app.css
services/ui/static/js/: app.js
services/ui/templates/: base.html  index.html
services/ui/templates/events/: _why_hidden.html  detail.html
services/ui/templates/filters/: _form_fields.html  _preview_results.html  _row.html  _table.html  form.html  list.html  preview.html
services/ui/templates/partials/: _confirm.html  _flash.html
services/ui/tests/: conftest.py  test_pages.py
tools/: dev-engine.sh  load_test.py  post_eve.sh  synth_eve.py
(+10 files in other folders)
