[project]
name = "suricata-filter-engine"
version = "0.1.0"
description = "Ingest, classify, and forward Suricata EVE alerts to Loki."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "structlog>=24.1",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-anyio>=0.0",
  "anyio>=4.4",
  "ruff>=0.6",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
